# stardelta

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: get_ffdec_release.yml  publish.yml
example_patch/: configuration.json
example_patch/patches/: ba2_loading_patch.json  ba2_mainmenu_patch.json  inventory_patch.json  mainmenu_patch.json
example_patch/scripts/: CustomButton.as  NewFeature.as
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ba2.rs  lib.rs  swf.rs  xdelta.rs
src/components/: choose-patcher.tsx  header.tsx  home.tsx  swf-patcher.tsx  xdelta-patcher.tsx  yaml-patcher.tsx
src/components/ui/: logo.tsx  sonner.tsx
