[package]
name = "stardelta"
version = "0.0.1"
description = "xdelta3 patcher for Starfield UIs"
authors = ["Dylan Henrich"]
edition = "2021"
license = "MIT"
license-file = "LICENSE"
documentation = "README.md"
keywords = ["stardelta", "xdelta3", "starfield"]
categories = ["utilities"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xdelta3 = "0.1.5"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-devtools-app = "2.0.0"
tauri-plugin-decorum = "1.1.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
