[package]
name = "stardelta"
version = "2.1.2"
description = "Delta patcher for Starfield UIs"
authors = ["Dylan Henrich"]
edition = "2021"
license = "MIT"
documentation = "README.md"
keywords = ["stardelta", "xdelta3", "starfield", "swf"]
categories = ["utilities"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xdelta3 = "0.1.5"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-devtools-app = "2.0.0"
tauri-plugin-decorum = "1.1.1"
swf-parser = "0.14.0"
swf-emitter = { git = "https://github.com/hierocles/swf-emitter", branch = "implement-import-assets" }
swf-types = "0.14.0"
usvg = "0.45.0"
kurbo = "0.11.1"  # For path operations
svgtypes = "0.15.3"  # For SVG parsing
xmlparser = "0.13.5"  # XML parsing for SVG
swf-fixed = "0.1.5"
ba2 = "3.0.1"
tempfile = "3.19.1"  # For temporary file handling

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
